# tensorflow

./: BUILD  deps.bzl  go.mod
tensorflow/go/: BUILD.bazel
tensorflow/go/compiler/xla/pjrt/distributed/protocol_go_proto/: BUILD.bazel  protocol.pb.go
tensorflow/go/core/framework/allocation_description_go_proto/: BUILD.bazel  allocation_description.pb.go
tensorflow/go/core/framework/api_def_go_proto/: BUILD.bazel  api_def.pb.go
tensorflow/go/core/framework/attr_value_go_proto/: BUILD.bazel  attr_value.pb.go
tensorflow/go/core/framework/cost_graph_go_proto/: BUILD.bazel  cost_graph.pb.go
tensorflow/go/core/framework/dataset_metadata_go_proto/: BUILD.bazel  dataset_metadata.pb.go
tensorflow/go/core/framework/dataset_options_go_proto/: BUILD.bazel  dataset_options.pb.go
tensorflow/go/core/framework/device_attributes_go_proto/: BUILD.bazel  device_attributes.pb.go
tensorflow/go/core/framework/full_type_go_proto/: BUILD.bazel  full_type.pb.go
tensorflow/go/core/framework/function_go_proto/: BUILD.bazel  function.pb.go
tensorflow/go/core/framework/graph_go_proto/: BUILD.bazel  graph.pb.go
tensorflow/go/core/framework/graph_transfer_info_go_proto/: BUILD.bazel  graph_transfer_info.pb.go
tensorflow/go/core/framework/kernel_def_go_proto/: BUILD.bazel  kernel_def.pb.go
tensorflow/go/core/framework/log_memory_go_proto/: BUILD.bazel  log_memory.pb.go
tensorflow/go/core/framework/model_go_proto/: BUILD.bazel  model.pb.go
tensorflow/go/core/framework/node_def_go_proto/: BUILD.bazel  node_def.pb.go
tensorflow/go/core/framework/op_def_go_proto/: BUILD.bazel  op_def.pb.go
tensorflow/go/core/framework/reader_base_go_proto/: BUILD.bazel  reader_base.pb.go
tensorflow/go/core/framework/resource_handle_go_proto/: BUILD.bazel  resource_handle.pb.go
tensorflow/go/core/framework/step_stats_go_proto/: BUILD.bazel  step_stats.pb.go
tensorflow/go/core/framework/summary_go_proto/: BUILD.bazel  summary.pb.go
tensorflow/go/core/framework/tensor_description_go_proto/: BUILD.bazel  tensor_description.pb.go
tensorflow/go/core/framework/tensor_go_proto/: BUILD.bazel  tensor.pb.go
tensorflow/go/core/framework/tensor_shape_go_proto/: BUILD.bazel  tensor_shape.pb.go
tensorflow/go/core/framework/tensor_slice_go_proto/: BUILD.bazel  tensor_slice.pb.go
tensorflow/go/core/framework/types_go_proto/: BUILD.bazel  types.pb.go
tensorflow/go/core/framework/variable_go_proto/: BUILD.bazel  variable.pb.go
tensorflow/go/core/framework/versions_go_proto/: BUILD.bazel  versions.pb.go
tensorflow/go/core/protobuf/for_core_protos_go_proto/: BUILD.bazel  autotuning.pb.go  bfc_memory_map.pb.go  cluster.pb.go  composite_tensor_variant.pb.go  config.pb.go  control_flow.pb.go  conv_autotuning.pb.go  coordination_config.pb.go  coordination_service.pb.go  critical_section.pb.go  data_service.pb.go  debug.pb.go  debug_event.pb.go  device_filters.pb.go  device_properties.pb.go  distributed_runtime_payloads.pb.go  eager_service.pb.go  error_codes.pb.go  graph_debug_info.pb.go  master.pb.go  master_service.pb.go  meta_graph.pb.go  named_tensor.pb.go  queue_runner.pb.go  remote_tensor_handle.pb.go  replay_log.pb.go  rewriter_config.pb.go  saved_model.pb.go  saved_object_graph.pb.go  saver.pb.go  service_config.pb.go  snapshot.pb.go  status.pb.go  struct.pb.go  tensor_bundle.pb.go  tensorflow_server.pb.go  trackable_object_graph.pb.go  transport_options.pb.go  verifier_config.pb.go  (+2 more)
tensorflow/go/genop/: BUILD.bazel
tensorflow/go/genop/internal/: BUILD.bazel
tensorflow/go/op/: BUILD.bazel  wrappers.go
tensorflow/go/stream_executor/: BUILD.bazel  dnn.pb.go
