load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

# keep
go_library(
    name = "go",
    srcs = [
        "android.go",
        "attrs.go",
        "context.go",
        "doc.go",
        "graph.go",
        "lib.go",
        "operation.go",
        "saved_model.go",
        "session.go",
        "shape.go",
        "signature.go",
        "status.go",
        "tensor.go",
        "tensor_handle.go",
        "version.go",
    ],
    cdeps = ["//:libtensorflow"],
    cgo = True,
    importpath = "github.com/tensorflow/tensorflow/tensorflow/go",
    visibility = ["//visibility:public"],
    deps = [
        "//tensorflow/go/core/protobuf/for_core_protos_go_proto",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)

go_test(
    name = "go_test",
    srcs = [
        "attrs_test.go",
        "context_test.go",
        "example_inception_inference_test.go",
        "graph_test.go",
        "operation_test.go",
        "saved_model_test.go",
        "session_test.go",
        "shape_test.go",
        "signature_test.go",
        "tensor_handle_test.go",
        "tensor_test.go",
        "util_test.go",
    ],
    embed = [":go"],
    deps = [
        "//tensorflow/go/core/framework/tensor_shape_go_proto",
        "//tensorflow/go/core/framework/types_go_proto",
        "//tensorflow/go/core/protobuf/for_core_protos_go_proto",
        "//tensorflow/go/op",
    ],
)
