load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "stream_executor",
    srcs = ["dnn.pb.go"],
    importpath = "github.com/tensorflow/tensorflow/tensorflow/go/stream_executor",
    visibility = ["//visibility:public"],
    deps = [
        "@io_bazel_rules_go//proto/wkt:wrappers_go_proto",
        "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
        "@org_golang_google_protobuf//runtime/protoimpl:go_default_library",
    ],
)
