load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "full_type_go_proto",
    srcs = ["full_type.pb.go"],
    importpath = "github.com/tensorflow/tensorflow/tensorflow/go/core/framework/full_type_go_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
        "@org_golang_google_protobuf//runtime/protoimpl:go_default_library",
    ],
)
