load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "step_stats_go_proto",
    srcs = ["step_stats.pb.go"],
    importpath = "github.com/tensorflow/tensorflow/tensorflow/go/core/framework/step_stats_go_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//tensorflow/go/core/framework/allocation_description_go_proto",
        "//tensorflow/go/core/framework/tensor_description_go_proto",
        "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
        "@org_golang_google_protobuf//runtime/protoimpl:go_default_library",
    ],
)
