load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "for_core_protos_go_proto",
    srcs = [
        "autotuning.pb.go",
        "bfc_memory_map.pb.go",
        "cluster.pb.go",
        "composite_tensor_variant.pb.go",
        "config.pb.go",
        "control_flow.pb.go",
        "conv_autotuning.pb.go",
        "coordination_config.pb.go",
        "coordination_service.pb.go",
        "critical_section.pb.go",
        "data_service.pb.go",
        "debug.pb.go",
        "debug_event.pb.go",
        "device_filters.pb.go",
        "device_properties.pb.go",
        "distributed_runtime_payloads.pb.go",
        "eager_service.pb.go",
        "error_codes.pb.go",
        "graph_debug_info.pb.go",
        "master.pb.go",
        "master_service.pb.go",
        "meta_graph.pb.go",
        "named_tensor.pb.go",
        "queue_runner.pb.go",
        "remote_tensor_handle.pb.go",
        "replay_log.pb.go",
        "rewriter_config.pb.go",
        "saved_model.pb.go",
        "saved_object_graph.pb.go",
        "saver.pb.go",
        "service_config.pb.go",
        "snapshot.pb.go",
        "status.pb.go",
        "struct.pb.go",
        "tensor_bundle.pb.go",
        "tensorflow_server.pb.go",
        "trackable_object_graph.pb.go",
        "transport_options.pb.go",
        "verifier_config.pb.go",
        "worker.pb.go",
        "worker_service.pb.go",
    ],
    importpath = "github.com/tensorflow/tensorflow/tensorflow/go/core/protobuf/for_core_protos_go_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//tensorflow/go/compiler/xla/pjrt/distributed/protocol_go_proto",
        "//tensorflow/go/core/framework/attr_value_go_proto",
        "//tensorflow/go/core/framework/cost_graph_go_proto",
        "//tensorflow/go/core/framework/device_attributes_go_proto",
        "//tensorflow/go/core/framework/function_go_proto",
        "//tensorflow/go/core/framework/graph_go_proto",
        "//tensorflow/go/core/framework/op_def_go_proto",
        "//tensorflow/go/core/framework/step_stats_go_proto",
        "//tensorflow/go/core/framework/tensor_go_proto",
        "//tensorflow/go/core/framework/tensor_shape_go_proto",
        "//tensorflow/go/core/framework/tensor_slice_go_proto",
        "//tensorflow/go/core/framework/types_go_proto",
        "//tensorflow/go/core/framework/variable_go_proto",
        "//tensorflow/go/core/framework/versions_go_proto",
        "//tensorflow/go/stream_executor",
        "@io_bazel_rules_go//proto/wkt:any_go_proto",
        "@io_bazel_rules_go//proto/wkt:duration_go_proto",
        "@io_bazel_rules_go//proto/wkt:wrappers_go_proto",
        "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
        "@org_golang_google_protobuf//runtime/protoimpl:go_default_library",
    ],
)
